--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="main.css">
 		<title>Abdullah's Personal Website</title>
+		<link rel="stylesheet" href="https://algorithmisfun.github.io/main.css" >
 	</head>
 	<style>
 		
