--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 		
 	</style>
 <body>
-	<ul>
-  		<li class="taskbar_items"><a class="taskbar" href="default.asp">Home</a></li>
-  		<li class="taskbar_items"><a class="taskbar" href="news.asp">About Me</a></li>
-  		<li class="taskbar_items"><a class="taskbar" href="contact.asp">Tech Skills</a></li>
-  		<li class="taskbar_items"><a class="taskbar" href="about.asp">Personal Projects</a></li>
-  		<li class="taskbar_items"><a class="taskbar" href="about.asp">Relevant Courses Completed</a></li>
-  		<li class="taskbar_items"><a class="taskbar" href="about.asp">Additional Experience</a></li>
+	<ul id="taskbar_items">
+  		<li><a class="taskbar" href="default.asp">Home</a></li>
+  		<li><a class="taskbar" href="news.asp">About Me</a></li>
+  		<li><a class="taskbar" href="contact.asp">Tech Skills</a></li>
+  		<li><a class="taskbar" href="about.asp">Personal Projects</a></li>
+  		<li><a class="taskbar" href="about.asp">Relevant Courses Completed</a></li>
+  		<li><a class="taskbar" href="about.asp">Additional Experience</a></li>
 	</ul>
 	<div>Contact Me at <a href = "mailto:abdullah61599@gmail.com"><img src="https://vignette.wikia.nocookie.net/joke-battles/images/f/fe/Mail.png/revision/latest?cb=20161130125750"></a>, <a href = "https://github.com/AlgorithmIsFun"><img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png"></a>, <a href = "https://www.facebook.com/profile.php?id=100006869763359"><img src="https://image.freepik.com/free-icon/facebook-logo_318-49940.jpg"></a> or Phone Number: 647-247 7874. Check out my <a href="AK_Resume.docx">Resume</a></div>
 	<h1>About Me</h1>
