--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 		<link rel="stylesheet" href="https://algorithmisfun.github.io/main.css" >
 	</head>
 <body>
-	<ul id="taskbar_items">
-  		<li><a class="taskbar" href="default.asp">Home</a></li>
-  		<li><a class="taskbar" href="news.asp">About Me</a></li>
-  		<li><a class="taskbar" href="contact.asp">Tech Skills</a></li>
-  		<li><a class="taskbar" href="about.asp">Personal Projects</a></li>
-  		<li><a class="taskbar" href="about.asp">Relevant Courses Completed</a></li>
-  		<li><a class="taskbar" href="about.asp">Additional Experience</a></li>
-	</ul>
+	<div id="taskbar_items">
+  		<li><a class="taskbar" href="#">Home</a></li>
+  		<li><a class="taskbar" href="#">About Me</a></li>
+  		<li><a class="taskbar" href="#">Tech Skills</a></li>
+  		<li><a class="taskbar" href="#">Personal Projects</a></li>
+  		<li><a class="taskbar" href="#">Relevant Courses Completed</a></li>
+  		<li><a class="taskbar" href="#">Additional Experience</a></li>
+	</div>
 	<div>Contact Me at <a href = "mailto:abdullah61599@gmail.com"><img src="https://vignette.wikia.nocookie.net/joke-battles/images/f/fe/Mail.png/revision/latest?cb=20161130125750"></a>, <a href = "https://github.com/AlgorithmIsFun"><img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png"></a>, <a href = "https://www.facebook.com/profile.php?id=100006869763359"><img src="https://image.freepik.com/free-icon/facebook-logo_318-49940.jpg"></a> or Phone Number: 647-247 7874. Check out my <a href="AK_Resume.docx">Resume</a></div>
 	<h1>About Me</h1>
 	<p>Hi, this is Abdullah. I am a Second Year University of Toronto Student studying Computer Science and Business. My current CGPA is 3.86. Some of my hobbies is coding, chess and swimming. My favorite programming langauge is Python. I am passionate about learning different languages, libaries, etc.</p>
@@ -32,10 +32,10 @@
 	<p>DOCX Reading: Allows user to select several word documents and return the number of occurances of a certain word(s).</p>
 	<h1>Relevant Courses Completed</h1>
 	<ul>
-		<li>CSC108: Intro to COMP Programming
-		<li>CSC148: Intro to COMP Science
+		<li>CSC108: Intro to Computer Programming
+		<li>CSC148: Intro to Computer Science
 		<li>MAT102: Intro to Math Proofs
-		<li>MGM101: Into to Business
+		<li>MGM101: Into to Managment
 		<li>ECO100: Economics
 	</ul>
 	<p>If you would lke to see my transcript, I can send you an email attachment if needed</p>
