--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	</head>
 <body>
 	<div id="taskbar_items">
-		<a href="#"><i class="taskbar" >Home</i></a>
-  		<a href="#"><i class="taskbar">About Me</i></a>
-  		<a href="#"><i class="taskbar">Tech Skills</i></a>
-  		<a href="#"><i class="taskbar">Personal Projects</i></a>
-  		<a href="#"><i class="taskbar">Relevant Courses Completed</i></a>
-		<a href="#"><i class="taskbar">Additional Experience</i></a>
+		<a href="#">Home</a>
+  		<a href="#">About Me</a>
+  		<a href="#">Tech Skills</a>
+  		<a href="#">Personal Projects</a>
+  		<a href="#">Relevant Courses Completed</a>
+		<a href="#">Additional Experience</a>
 	</div>
 	<div>Contact Me at <a href = "mailto:abdullah61599@gmail.com"><img src="https://vignette.wikia.nocookie.net/joke-battles/images/f/fe/Mail.png/revision/latest?cb=20161130125750"></a>, <a href = "https://github.com/AlgorithmIsFun"><img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png"></a>, <a href = "https://www.facebook.com/profile.php?id=100006869763359"><img src="https://image.freepik.com/free-icon/facebook-logo_318-49940.jpg"></a> or Phone Number: 647-247 7874. Check out my <a href="AK_Resume.docx">Resume</a></div>
 	<h1>About Me</h1>
