--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<div id="taskbar_items">
 		<a href="#">Home</a>
-  		<a href="#">About Me</a>
+  		<a name="#About Me">About Me</a>
   		<a href="#">Tech Skills</a>
   		<a href="#">Personal Projects</a>
   		<a href="#">Relevant Courses Completed</a>
