--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<a href="#Additional Experience">Additional Experience</a>
 	</div>
 	<div>Contact Me at <a href = "mailto:abdullah61599@gmail.com"><img src="https://vignette.wikia.nocookie.net/joke-battles/images/f/fe/Mail.png/revision/latest?cb=20161130125750"></a>, <a href = "https://github.com/AlgorithmIsFun"><img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png"></a>, <a href = "https://www.facebook.com/profile.php?id=100006869763359"><img src="https://image.freepik.com/free-icon/facebook-logo_318-49940.jpg"></a> or Phone Number: 647-247 7874. Check out my <a href="AK_Resume.docx">Resume</a></div>
-	<h1>About Me</h1>
+	<h1 id="About Me">About Me</h1>
 	<p>Hi, this is Abdullah. I am a Second Year University of Toronto Student studying Computer Science and Business. My current CGPA is 3.86. Some of my hobbies is coding, chess and swimming. My favorite programming langauge is Python. I am passionate about learning different languages, libaries, etc.</p>
-	<h1>Tech Skills</h1>
+	<h1 id="Tech Skills">Tech Skills</h1>
 	<ul>
 		<li>Python
 		<li>Java
@@ -25,12 +25,12 @@
 		<li>Microsoft Office
 		<li>SQL
 	</ul>
-	<h1>Personal Projects</h1>
+	<h1 id="Personal Projects">Personal Projects</h1>
 	<p>Number Theory: Practice where I programmed number theory algorithms (including GCD, division algorithm, Prime Factorization, Fundamental Theorm of Arithmitic, LCM, etc).</p>
 	<p>Crypto: A simple crypto program that applies arithmitic on the ASCII values of a message to create a hidden message. It also decodes the message.</p>
 	<p>Excel-to-database: Takes a excel spreedsheet and creates a database file containing the heading and items. Makes us of xlrd, sqlite3 and tkinter libraries. Also, requires to code part of a database.</p>
 	<p>DOCX Reading: Allows user to select several word documents and return the number of occurances of a certain word(s).</p>
-	<h1>Relevant Courses Completed</h1>
+	<h1 id="Relevant Courses Completed">Relevant Courses Completed</h1>
 	<ul>
 		<li>CSC108: Intro to Computer Programming
 		<li>CSC148: Intro to Computer Science
@@ -39,7 +39,7 @@
 		<li>ECO100: Economics
 	</ul>
 	<p>If you would lke to see my transcript, I can send you an email attachment if needed</p>
-	<h1>Additional Experience</h1>
+	<h1 id="Additional Experience">Additional Experience</h1>
 	<p>FSG Leader: Assisting students with learning and understanding that run on a peer-to-peer learning model. Leaders are students who have an outstanding academic standing</p>
 	<p>Hack The North: Participated in Waterloo's Hackathon and developed teamwork and software design experience</p>
 	<p>MCSSS: Participated in the math and Computer Science Society</p>
