--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
   		<a href="#Relevant Courses Completed">Relevant Courses Completed</a>
 		<a href="#Additional Experience">Additional Experience</a>
 	</div>
-	<div>Contact Me at <a href = "mailto:abdullah61599@gmail.com"><img src="https://vignette.wikia.nocookie.net/joke-battles/images/f/fe/Mail.png/revision/latest?cb=20161130125750"></a>, <a href = "https://github.com/AlgorithmIsFun"><img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png"></a>, <a href = "https://www.facebook.com/profile.php?id=100006869763359"><img src="https://image.freepik.com/free-icon/facebook-logo_318-49940.jpg"></a> or Phone Number: 647-247 7874. Check out my <a href="AK_Resume.docx">Resume</a></div>
+	<div>Contact Me at <a href = "mailto:abdullah61599@gmail.com"><img src=
+	"https://vignette.wikia.nocookie.net/joke-battles/images/f/fe/Mail.png/revision/latest?cb=20161130125750"></a>,
+	<a href = "https://github.com/AlgorithmIsFun"><img src=
+	"https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png"></a>, 
+	<a href = "https://www.facebook.com/profile.php?id=100006869763359"><img src=
+	"https://image.freepik.com/free-icon/facebook-logo_318-49940.jpg"></a> or Phone Number: 
+	647-247 7874. Check out my <a href="AK_Resume.docx">Resume</a></div>
 	<h1 id="About Me">About Me</h1>
 	<p>Hi, this is Abdullah. I am a Second Year University of Toronto Student studying Computer Science and Business. My current CGPA is 3.86. Some of my hobbies is coding, chess and swimming. My favorite programming langauge is Python. I am passionate about learning different languages, libaries, etc.</p>
 	<h1 id="Tech Skills">Tech Skills</h1>
