--- a/index.html
+++ b/index.html
@@ -49,5 +49,11 @@
 	<p>FSG Leader: Assisting students with learning and understanding that run on a peer-to-peer learning model. Leaders are students who have an outstanding academic standing</p>
 	<p>Hack The North: Participated in Waterloo's Hackathon and developed teamwork and software design experience</p>
 	<p>MCSSS: Participated in the math and Computer Science Society</p>
+	<h1 id="Blog">Abdullah's Blog</h1>
+	<h2>Introducing Me</h2>
+	<p>As a University of Toronto student, I am pursuing a role where I can leverage my education, skills and previous experience to further grow and drive a positive impact.
+As a current student, I have developed critical thinking skills through my education which I use to illustrate, quantify and interpret complex problems in the work environment. I have completed management and computer science courses at University and high school while receiving multiple academic awards. In addition, I have been working as a cashier at Walmart Canada for the past year. During this time, I was responsible to hitting quotas and advertise multiple customer service promotions while driving excellent customer service. I have proven to be a hard-working associate and always drive strong customer service. I am also very involved in the community as a volunteer to increase my leadership skills. During my time as a FSG Leader, I am responsible of managing a classroom setting and assisting with the understanding of course concepts. I believe that my previous experience and personal drive has well prepared me for this employment opportunity.
+I am confident that my skills qualify me for this position with your company and I am certain I will be able to positively contribute to your team. I trust that this opportunity will allow me to see the greater vista of possibilities to further develop and grow as an individual and I look forward to hearing from you.
+	</p>
 </body>
 </html>
