--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   		<a href="#Personal Projects">Personal Projects</a>
   		<a href="#Relevant Courses Completed">Relevant Courses Completed</a>
 		<a href="#Additional Experience">Additional Experience</a>
+		<a href="#Blog">Blog</a>
 	</div>
 	<div>Contact Me at <a href = "mailto:abdullah61599@gmail.com"><img src=
 	"https://vignette.wikia.nocookie.net/joke-battles/images/f/fe/Mail.png/revision/latest?cb=20161130125750"></a>,
