--- a/index.html
+++ b/index.html
@@ -60,5 +60,38 @@
 	<p>Next, lets talk about CSC290. My first thought was English in grade 12 all over again. But when I attended the first lecture, all my fears have come true. All we learned was grammar and critical thinking. Like, every week’s lecture has something to do with grammar. I hear it gets better and the syllabus does look more interesting in a few weeks. But I will be the judge of that.</p>
 	<p>One thing I do want to get better in this course is my networking skills. I can talk to people pretty well, its just taking the first step and introducing yourself I need to work on. I want to be able to network with people in social gatherings. I feel like I can help other people with their resumes. I have spent a good 100 hours learning how to make professional resumes and cover letters.</p>
 	<p>Well, I think that’s enough of me rambling about random stuff, so let me end off here. The things that define us are not what makes us normal, but how we use our abnormalities to make us unique.</p>
-</body>
+	<h2>Every Developer Needs to Make a Paint Program</h2>
+	<p>When I was a child, I used to draw and color a lot. I was always told I was quite the artist. That was obviously a lie. I then changed my career goals into something more realistic; coding.
+	<h3>Why Paint?</h3>
+	<p>Paint is not such a simple project we all thought it was. The paint application we have on our pc make use of event handing, User Interface (UI), object-oriented programing, design patterns, etc. It makes use of a lot of diverse skills and lets you get a taste in back-end and front-end programming.</p>
+	<h3>Where do I start?</h3>
+	<p>Starting a program is one of the most stressful parts of any program development process. There were a million ideas I wanted to implement but didn’t know how to begin. Sometimes, it is easier to just start with something simpler. Like making a circle. I gave it a radius, location and color. Just a simple class but it allowed me to start coding than to just be sitting there, staring at the screen.</p> 
+	<h3>Help is always key</h3>
+	<p>When working on this project, I would have taken a long time in order to complete it. Working with teammates not only help me with dealing with all this step but, they also brought in a different vision on how to implement my code. Sometimes working with teammates can be frustrating. Learning that you can not do everything by yourself and become part of something greater helped me grow into a stronger and versatile coder.</p>
+	<h3>Errors are the bane to my batman</h3>
+	<p>I hate errors. We all do. There is nothing more frustrating than tracing your code and finding that one small mistake that is crashing your whole program. My biggest mistake was when I accidently changed one of my variable values. Something that small would cause my huge program to not run at all. But through that experience, I have become better at catching my errors and preventing them from occurring in the first place.</p>
+	<h3>I Love Git</h3>
+	<p>Git is one of the most useful group project resource I have ever used. To be able to share code, update and even go back to previous states is amazing. Especially the fact that repos are all online. So, even if something were to happen to your computer, git will be there to save the day. At least your code though. Your computer is probably gone.</p>
+	<h3>I hate Conflicts</h3>
+	<p>Now, working with others and pushing your repo is fine and all. But if you get the allusive git merge conflict, it can become quite frustrating. Being forced to read and understand someone else code and combining it with your code is annoying. But sometimes, you must be the bigger man and deal with it. It will help you understand what other people are writing and be aware of other coding techniques.</p>
+	<h3>We allow ourselves to design crazy things</h3>
+	<p>We always reference something when we innovate past objects to be better. This skill of using what is already proven to work in order to implement my pre-existing code is known as Design Patterns. Learning how to not only create UI program, but how to manipulate object-oriented programming into interacting with each other. This allowed me to create interactions and combinations I could never even think of if I did it myself.</p>
+	<h3>Programs look better with UI</h3>
+	<p>At the beginning of my project, all I had was classes for different objects I wanted to implement. Just lines of code that didn’t really interact with the user. Through my transition from outputting information from the terminal to a display made the code I wrote feel more realistic. It made my program so much more tangible and interactive with the user. I remember when I ran my first test on the panel, I thought “hey, this looks cool”.</p>
+	<h3>Google is your best friendv
+	<p>Whenever any of us are stuck on a coding problem, our first instinct would be is google. At least, that is for me. Whenever you are trying to implement something cool but don’t know how to do it, you google it. Whenever you are trying to fix and error, but you don’t understand the error message, you google it. Whenever you are looking up how to implement design patterns, you google it. This is an important skill for anyone entering the world of coding. The reality is, we don’t know everything. But asking your community for help once in a while, will not only lead you to the solution, but it will also teach you a new way to code.</p>
+	<p>Overall, coding the Paint Project made me a better coder and more understandable of the resources around me.</p>
+	<h2>Gary Vaynerchuk- A Man who has Something to Say</h2>
+	<h3>Who is he?</h3>
+	<p>Gary is a man with a goal. He has the confidence to boost and the pride of a lion. Gary is a 40-year-old entrepreneur that provides a service to help starting and pre-existing entrepreneurs with their businesses. He is relatable. Gary does not care about showing off what he has and what you don’t. Gary will come to an interview with a sweater and jeans. People only dress up in a suit when they try to prove something because he rather uses the money for investments then materialistic objects.</p>
+	<h3>Happiness</h3>
+	<p>Gary might not be the happiest person, but he values happiness above all. He believes that life is not worth living if you are not happy. What you should be working for the next 40 years should be something you at least enjoy yourself. </p>
+	<h3>Everything has a price</h3>
+	<p>We should all strive to have happiness in our lives and do what you want to do. But he speaks the truth when he says that you can “work at a non-profit organization that you love but don’t expect to live in a mansion”.  He even talks about the risk of going out on your own and the probability that you might fail. Starting entrepreneurs must sacrifice their house, savings and time in order to reach their goals. If you want to reach the 1%, you need to put in the work and stop wasting time.</p>
+	<h3>Speaking Loud and Clear</h3>
+	<p>Gary does not whisper or rambles when he is speaking to people. He speaks confidently, with a lot of pride. He knows his stuff and is an expert on how the real-world works. When he speaks in the room, everyone takes a second to listen to what he has to say.</p>
+	<h3>Utilizing Presentation</h3>
+	<p>When Gary presents an idea and uses visuals or a presentation software, he does not speak from the slides. Many presenters base their content off the slides but, Gary’s slides base their content off of him. He does not rely on slides. He can have them off and still get the same response from his crowd. Gary has such a strong personality and has excellent eye content. Gary does not waste time in his speeches, he gets straight to the point and goes through interesting content in every sentence he speaks.</p>
+
+	</body>
 </html>
